--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,11 +29,9 @@ jobs:
           ANYPOINT_CLIENT_ID: ${{ secrets.ANYPOINT_CLIENT_ID }}
           ANYPOINT_CLIENT_SECRET: ${{ secrets.ANYPOINT_CLIENT_SECRET }}
         run: |
-          APP_VERSION="1.0.${{ github.run_number }}"
-          mvn clean deploy --settings .maven/settings.xml -DskipMunitTests \
+          mvn deploy --settings .maven/settings.xml -DskipMunitTests \
           -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
-          -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}" \
-          -Drevision=$APP_VERSION
+          -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}"
 
       - name: Deploy to CloudHub 2.0
         env:
@@ -43,13 +41,11 @@ jobs:
           # Lógica para determinar el ambiente y el nombre de la app
           ENV_NAME=${{ github.event_name == 'workflow_dispatch' && github.event.inputs.target_env || 'Production' }}
           APP_SUFFIX=$([[ "$ENV_NAME" == "Production" ]] && echo "" || echo "-dev")
-          APP_VERSION="1.0.${{ github.run_number }}"
           mvn deploy --settings .maven/settings.xml -DskipMunitTests -DmuleDeploy \
           -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
           -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}"
           -Dapp.name="test-pipeline-lfsv$APP_SUFFIX" \
-          -Denv="$ENV_NAME" \
-          -Drevision=$APP_VERSION
+          -Denv="$ENV_NAME"
       
       - name: Create Git Tag
         if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event.inputs.target_env == 'Production' }}
