--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>dacc71c3-5df5-4aec-8b33-e7f0b070ee24</groupId>
     <artifactId>test-pipeline-lfsv</artifactId>
-    <version>1.0.4</version>
+    <version>1.0.5</version>
     <packaging>mule-application</packaging>
     <name>test-pipeline-lfsv</name>
     <properties>
@@ -28,7 +28,7 @@
                     <cloudhub2Deployment>
                         <uri>https://anypoint.mulesoft.com</uri>
                         <provider>MC</provider>
-                        <environment>Development</environment>
+                        <environment>${env}</environment>
                         <target>Cloudhub-US-West-2</target>
                         <server>Repository</server>
                         <applicationName>test-pipeline-lfsv</applicationName>
