--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
                     <cloudhub2Deployment>
                         <uri>https://anypoint.mulesoft.com</uri>
                         <provider>MC</provider>
-                        <environment>${env}</environment>
+                        <environment>Production</environment>
                         <target>Cloudhub-US-West-2</target>
                         <server>Repository</server>
                         <applicationName>test-pipeline-lfsv</applicationName>
