--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,15 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>dacc71c3-5df5-4aec-8b33-e7f0b070ee24</groupId>
     <artifactId>test-pipeline-lfsv</artifactId>
-    <version>1.0.8</version>
+    <version>1.0.9</version>
     <packaging>mule-application</packaging>
     <name>test-pipeline-lfsv</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <mule.maven.plugin.version>4.6.1</mule.maven.plugin.version>
-        <env>${env}</env>
-        <app.name>${app.name}</app.name>
+        <env.dynamic>${env}</env.dynamic>
+        <app.name.dynamic>${app.name}</app.name.dynamic>
     </properties>
     <build>
         <plugins>
@@ -30,10 +30,10 @@
                     <cloudhub2Deployment>
                         <uri>https://anypoint.mulesoft.com</uri>
                         <provider>MC</provider>
-                        <environment>${env}</environment>
+                        <environment>${env.dynamic}</environment>
                         <target>Cloudhub-US-West-2</target>
                         <server>Repository</server>
-                        <applicationName>${app.name}</applicationName>
+                        <applicationName>${app.name.dynamic}</applicationName>
                         <releaseChannel>LTS</releaseChannel>
                         <replicas>1</replicas>
                         <vCores>0.1</vCores>
