--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       contents: write
     environment: 
           name: ${{ github.event.inputs.target_env || 'Production' }}
-          
+
     steps:
       - name: Checkout this repo
         uses: actions/checkout@v4
@@ -75,7 +75,11 @@ jobs:
           # 1. Extraer la versión actual del POM
           APP_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
           
-          echo "Creando tag oficial para la versión: v$APP_VERSION"
+          # 1.2. Obtener el título del PR (o el último mensaje de commit)
+          # Esto toma la primera línea del mensaje del commit de merge
+          COMMIT_MSG=$(git log -1 --pretty=%s)
+          
+          echo "Creando tag oficial: v$APP_VERSION con mensaje: $COMMIT_MSG"
           
           # 2. Configurar Git (identidad del bot)
           git config user.name "github-actions[bot]"
@@ -83,5 +87,5 @@ jobs:
           
           # 3. Crear el tag y subirlo
           # Usamos -f (force) por si necesitas re-subir la misma versión después de un error
-          git tag -a v$APP_VERSION -m "Release oficial de Producción v$APP_VERSION"
+          git tag -a v$APP_VERSION -m "$COMMIT_MSG (v$APP_VERSION)"
           git push origin v$APP_VERSION
