--- a/.github/workflows/rollback.yml
+++ b/.github/workflows/rollback.yml
@@ -2,7 +2,6 @@ name: "Emergency Rollback"
 
 on:
   workflow_dispatch:
-    # Eliminamos los inputs manuales para no preguntar dos veces
 
 jobs:
   rollback:
@@ -14,15 +13,13 @@ jobs:
       - name: Checkout de la Referencia Seleccionada
         uses: actions/checkout@v4
         with:
-          # GitHub ya sabe qué seleccionaste en "Use workflow from"
-          # Si seleccionas un TAG en ese combo, bajará ese TAG automáticamente
           ref: ${{ github.ref_name }}
+          fetch-depth: 0 # Esto permite que el pipeline encuentre los Tags
 
       - name: Validar que sea un TAG
         run: |
-          # Opcional: Esto detiene el proceso si alguien intenta usar una rama en vez de un TAG
           if [[ "${{ github.ref_type }}" != "tag" ]]; then
-            echo "ERROR: Solo se permiten TAGS para Rollbacks de emergencia."
+            echo "ERROR: Por seguridad, solo se permiten TAGS certificados para Rollbacks."
             exit 1
           fi
 
