--- a/.github/workflows/theRollback.yml
+++ b/.github/workflows/theRollback.yml
@@ -1,4 +1,4 @@
-name: "Production Rollback"
+oname: "Production Rollback"
 
 on:
   workflow_dispatch:
@@ -40,7 +40,7 @@ jobs:
           </settings>" > settings.xml
 
           # Ejecutamos el deploy usando el settings recién creado
-          mvn deploy --settings settings.xml -DskipMunitTests -DmuleDeploy \
+          echo mvn deploy --settings settings.xml -DskipMunitTests -DmuleDeploy \
           -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
           -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}" \
           -Denv=Production \
