con cache en RB

--- a/.github/workflows/theRollback.yml
+++ b/.github/workflows/theRollback.yml
@@ -15,6 +15,19 @@ jobs:
         with:
           ref: ${{ github.ref_name }}
           fetch-depth: 0 # Esto permite que el pipeline encuentre los Tags
+      
+      - name: Cache dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-maven-
+
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v4
+        with:
+          distribution: "zulu"
+          java-version: 8
 
       - name: Validar que sea un TAG
         run: |
@@ -35,4 +48,3 @@ jobs:
           -Denv=Production \
           -Denv.key="${{ secrets.MULE_KEY }}" \
           -Dapp.name="test-pipeline-lfsv"
-          
